# vn

./: LICENSE  README.md  pyproject.toml  test.ipynb
data/: chileautos.csv
prompts/: extraction.j2  matching.j2
samples/: extraction.json  matching.json
src/: models.py  normalizer.py
