[project]
name = "vn"
version = "0.1.0"
description = "Vehicle normalization framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-openai>=0.3.21",
    "openai>=1.84.0",
]
